src/components/RootLandingPage/TheMiddle/Projects/projects.css
#background1{
    background:url("../../../../../public/images/projectsBackground.jpg");
    width:100vw;
    height:75vh;
    display:flex;
    justify-content:center;
    align-items:center;
    flex-direction:column;
    background-repeat:no-repeat;
    background-size:cover;
}
#myPicDiv{
    display:flex;
    justify-content:center;
    margin-bottom:2vw;
}
#me{
    display:flex;
    margin-top:30px;
    height:30vh;
    width:auto;
    min-width:200px;
    max-width:500px;
    min-height:120px;
    max-height:500px;
}
#projectsDiv{
    display:flex;
    justify-content:space-evenly;
    width:100vw;
    margin-top:2vh;
}
.projectImages{
    border-radius:75px;
}
@media(max-width:770px){
    .projectImages{
        height:100px;
        width:100px;
    }
}

